k8s/gatekeeper/constraint-notroot.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8snotroot
spec:
  crd:
    spec:
      names:
        kind: K8sNotRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8snotroot

        violation[{
          "msg": msg,
          "details": {"container": c}
        }] {
          input.review.object.spec.template.spec.containers[_] as c
          not c.securityContext.runAsNonRoot
          msg := "container runs as root"
        }
        violation[{
          "msg": msg,
          "details": {"container": c}
        }] {
          input.review.object.spec.template.spec.containers[_] as c
          c.securityContext.runAsNonRoot == false
          msg := "container runs as root"
        }
