k8s/gatekeeper/constrainttemplate-notroot.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNotRoot
metadata:
  name: disallow-root-containers
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
